fixed minor bugs, added toggle button for input visibility

--- a/style.css
+++ b/style.css
@@ -54,9 +54,7 @@ select:hover {
 }
 
 span {
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     font-size: 20px;
-    padding: 5px;
     margin: 10px;
 }
 
